--- a/portfolio.html
+++ b/portfolio.html
@@ -18,7 +18,7 @@
               </a>
               <ul class="list left-list">  
                  <li class="link-item"><a class="link" href="index.html">Студия</a></li>
-                 <li class="link-item"><a class="link" href="#portfolio">Портфолио</a></li>
+                 <li class="link-item active"><a class="link" href="#portfolio">Портфолио</a></li>
                  <li class="link-item"><a class="link" href="#contacts">Контакты</a></li>
                </ul> 
                <ul class="list right-list">
@@ -52,46 +52,55 @@
             <div class="portfolio-container-item">
               <ul class="list flex-wrap">
                     <li class="flex-wrap-item">
-                      <img src="./images/portfolio/img-1.jpg"  alt="Ноутбук"/>
-                      <h3 class="project-name">Технокряк</h3>
-                      <p class="project-type">Веб-сайт</p>
+                         <span class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</span>
+                         <img src="./images/portfolio/img-1.jpg"  alt="Ноутбук"/>
+                         <h3 class="project-name">Технокряк</h3>
+                         <p class="project-type">Веб-сайт</p>
                     </li>
                     <li class="flex-wrap-item">
+                        <span class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</span>
                       <img src="./images/portfolio/img-2.jpg"  alt="Два игрока в баскетбол"/>
                       <h3 class="project-name">Постер New Orlean vs Golden Star</h3>
                       <p class="project-type">Дизайн</p>
                    </li>
                    <li class="flex-wrap-item">
+                       <span class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</span>
                       <img src="./images/portfolio/img-3.jpg"  alt="Банер ресторана"/>
                       <h3 class="project-name">Ресторан Seafood</h3>
                       <p class="project-type">Приложение</p>
                    </li>
                    <li class="flex-wrap-item">
+                       <span class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</span>
                        <img src="./images/portfolio/img-4.jpg"   alt="Наушники"/>
                        <h3 class="project-name">Проект Prime</h3>
                        <p class="project-type">Маркетинг</p>
                    </li>
                    <li class="flex-wrap-item">
+                       <span class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</span>
                        <img src="./images/portfolio/img-5.jpg"   alt="Две коробки"/>
                        <h3 class="project-name">Проект Boxes</h3>
                        <p class="project-type">Приложение</p>
                    </li>
                    <li class="flex-wrap-item">
+                       <span class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</span>
                        <img src="./images/portfolio/img-6.jpg"   alt="Монитор"/>
                        <h3 class="project-name">Inspiration has no Borders</h3>
                        <p class="project-type">Веб-сайт</p>
                    </li>
                    <li class="flex-wrap-item">
+                       <span class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</span>
                        <img src="./images/portfolio/img-7.jpg"   alt="Книга"/>
                        <h3 class="project-name">Издание Limited Edition</h3>
                        <p class="project-type">Дизайн</p>
                    </li>
                    <li class="flex-wrap-item">
+                       <span class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</span>
                        <img src="./images/portfolio/img-8.jpg"  alt="Бирка"/>
                        <h3 class="project-name">Проект LAB</h3>
                        <p class="project-type">Маркетинг</p>
                    </li>
                    <li class="flex-wrap-item">
+                    <span class="description">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</span>
                        <img src="./images/portfolio/img-9.jpg"  alt="Печать на ноутбуке"/>
                        <h3 class="project-name">Growing Business</h3>
                        <p class="project-type">Приложение</p>
@@ -119,15 +128,28 @@
                   <div class="join-social">
                       <h3 class="join">присоединяйтесь</h3>
                       <ul class="social-icons">
-                          <li class="social-icons-item"><a class="social-icons-link-footer" href="https://instagram.com/" target="blanc" rel="noopener noreferer" aria-label="Instagram"><svg class="social-icons-svg"><use href="./icons/sprit.svg#icon-instagram"></use></svg></a></li>
-                          <li class="social-icons-item"><a class="social-icons-link-footer" href="https://twitter.com/" target="blanc" rel="noopener noreferer" aria-label="Twitter"><svg class="social-icons-svg"><use href="./icons/sprit.svg#icon-twitter"></use></svg></a></li>
-                          <li class="social-icons-item"><a class="social-icons-link-footer" href="https://facebook.com/" target="blanc" rel="noopener noreferer" aria-label="Facebook"><svg class="social-icons-svg"><use href="./icons/sprit.svg#icon-facebook"></use></svg></a></li>
-                          <li class="social-icons-item"><a class="social-icons-link-footer" href="https://lincedin.com/" target="blanc" rel="noopener noreferer" aria-label="Lincedin"><svg class="social-icons-svg"><use href="./icons/sprit.svg#icon-linkedin"></use></svg></a></li>
+                          <li class="social-icons-item"><a class="social-icons-link-footer" href="https://instagram.com/" target="blanc" rel="noopener noreferer" aria-label="Instagram"><svg class="social-icons-svg-footer"><use href="./icons/sprit.svg#icon-instagram"></use></svg></a></li>
+                          <li class="social-icons-item"><a class="social-icons-link-footer" href="https://twitter.com/" target="blanc" rel="noopener noreferer" aria-label="Twitter"><svg class="social-icons-svg-footer"><use href="./icons/sprit.svg#icon-twitter"></use></svg></a></li>
+                          <li class="social-icons-item"><a class="social-icons-link-footer" href="https://facebook.com/" target="blanc" rel="noopener noreferer" aria-label="Facebook"><svg class="social-icons-svg-footer"><use href="./icons/sprit.svg#icon-facebook"></use></svg></a></li>
+                          <li class="social-icons-item"><a class="social-icons-link-footer" href="https://lincedin.com/" target="blanc" rel="noopener noreferer" aria-label="Lincedin"><svg class="social-icons-svg-footer"><use href="./icons/sprit.svg#icon-linkedin"></use></svg></a></li>
                       </ul>
-                  </div>
-             </li>
-          </ul>
-        </div>
-    </footer>
-</body>  
-</html>
+                    </div>
+                </li>
+                <li>
+                    <div class="subscribe-newsletter">
+                        <h3 class="subscribe">Подпишитесь на рассылку</h3>
+                        <form class="subscribe-form" id="subscribe-form">
+                            <input type="email" class="form-feald" name="user-email" placeholder="E-mail" required>
+                            <button class="subscribe-btn" type="submit">Подписаться<svg class="svg-plain" width="24" height="24" fill="var(--wait-cl)">
+                                <use href="./icons/sprit.svg#icon-plain"></use>
+                            </svg></button>
+                        </form>
+                    </div>
+                </li>
+             </ul>
+           </div>
+       </footer>
+       <script src="./js/modal.js"></script>
+   </body>
+   </html>
+   
