--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Web Studio</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/main.min.css"/>
 </head>
 <body>
     <header class="header-box">
@@ -44,7 +44,7 @@
               <button class="btn" type="button" data-modal-open>Заказать услугу</button>
               <div class="backdrop is-hidden" data-modal>
                   <div class="modal">
-                      <h3 class="modai-title">Оставьте свои данные, мы вам перезвоним</h3>
+                      <h3 class="modal-title">Оставьте свои данные, мы вам перезвоним</h3>
                       <button class="button-clouse" data-modal-close>
                           <svg class="icon-x">
                              <use href="./icons/x-2.svg#icon-x"></use>
