--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,7 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="./css/normalize.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css"/>
+    <link rel="stylesheet" href="./css/main.min.css"/>
 </head>
 <body>
     
